--- a/views/secretaria/secretariaGestionTurno.pug
+++ b/views/secretaria/secretariaGestionTurno.pug
@@ -5,18 +5,14 @@ html
     link(rel="stylesheet" href="/css/secretariaGestionTurno.css")
   body
     header
-      a(href="http://localhost:3000/secretaria/home" rel="noopener noreferrer"): img(src="/img/agenda.png" alt="" class="logoHeader")
+      a(href="https://agendadeconsultorio.onrender.com/secretaria/home" rel="noopener noreferrer"): img(src="/img/agenda.png" alt="" class="logoHeader")
       nav 
         ul(class="ulHeader")
           li: a(href="/turnos/listarTurnos") Ver Turnos
           li: a(href="/secretaria/gestionTurno") Gestionar Turnos
           li: a(href="javascript:void(0);" id="logoutButton") Cerrar Sesión
-    h1 Bienvenida, secretaria!
-    p Aquí puedes gestionar turnos.
-      
-   
-    
-    form(action="/turnos/crear" method="POST") 
+    h1 ¡Bienvenida, secretaria!
+    form(action="/turnos/crear" method="POST" class="formTurnos") 
       h3 Selecciona un Profesional
       if profesionales && profesionales.length
         select(name="profesional_especialidad_id" required)
@@ -33,26 +29,15 @@ html
               option(value=paciente.id)= `${paciente.dni} - ${paciente.nombre_completo}`
       else
         p no se encontraron pacientes
-
-      
       label(for="fecha") Selecciona la fecha:
       input(type="date" name="fecha" id="fecha" required)
-
-      
       label(for="horario") Selecciona un horario:
       select(name="hora" id="horario" required)
         option(value="" selected disabled) Selecciona un horario
-
-      
       label(for="detalle_turno") Detalle del turno:
       textarea(name="detalle_turno" id="detalle_turno" rows="4" placeholder="Detalles adicionales del turno" required)
-
-      
       input(type="hidden" name="estado" value="Confirmado")
-
       button(type="submit") Crear Turno
-      
-
     footer(class="footer")
       section(class="sectionFooter")
         ul(class="ulFooter") Nuestros GitHub
@@ -62,6 +47,5 @@ html
         ul(class="ulFooter") Nuestros LinkedIn
           li: a(href="https://github.com/JuanCarrillo2435") Carrillo Juan
           li: a(href="https://www.linkedin.com/in/lucero-roque-roberto-miguel-2122bb251/") Lucero Miguel
-
     script(src="/js/logout.js")
     script(src="/js/horarios.js")
