--- a/views/secretaria/secretariaTurnoSuccess.pug
+++ b/views/secretaria/secretariaTurnoSuccess.pug
@@ -2,35 +2,19 @@ doctype html
 html
   head
     title Secretaria Panel
-    link(rel="stylesheet" href="/css/secretaria.css")
+    link(rel="stylesheet" href="/css/secretariaGestionTurno.css")
   body
     header
       a(href="https://agendadeconsultorio.onrender.com/secretaria/home" rel="noopener noreferrer"): img(src="/img/agenda.png" alt="" class="logoHeader")
       nav 
         ul(class="ulHeader")
           li: a(href="/turnos/listarTurnos") Ver Turnos
-          li: a(href="/turnos/listarProfesionales") Sacar Turnos
+          li: a(href="/secretaria/gestionTurno") Gestionar Turnos
           li: a(href="javascript:void(0);" id="logoutButton") Cerrar Sesión
-    h1 ¡Bienvenida, secretaria!
-    h2 Lista de Turnos
-    section.sectionMain
-      if turnos && turnos.length
-        table.tableTurnos
-          thead
-            tr
-              th Turno para
-              th Fecha
-              th Hora
-              th Observación
-          tbody
-            each turno in turnos
-              tr
-                td= turno.paciente_nombre
-                td= turno.fecha
-                td= turno.hora
-                td= turno.detalle_turno
-            else
-              p No hay turnos disponibles
+    h1 ¡Turno creado exitosamente!
+    a(href="https://agendadeconsultorio.onrender.com/secretaria/home" rel="noopener noreferrer") Volver al inicio
+      
+
     footer(class="footer")
       section(class="sectionFooter")
         ul(class="ulFooter") Nuestros GitHub
@@ -40,4 +24,6 @@ html
         ul(class="ulFooter") Nuestros LinkedIn
           li: a(href="https://github.com/JuanCarrillo2435") Carrillo Juan
           li: a(href="https://www.linkedin.com/in/lucero-roque-roberto-miguel-2122bb251/") Lucero Miguel
+
     script(src="/js/logout.js")
+    script(src="/js/horarios.js")
