--- a/public/css/secretaria.css
+++ b/public/css/secretaria.css
@@ -25,8 +25,18 @@ header{
     gap: 50px;
 }
 
-li{
-    list-style-type: none;
+.sectionMain{
+    min-height: 45vh;
+}
+
+table{
+    width: 800px;
+    text-align: center;
+    border: 1px solid black;
+}
+
+tr, th, td{
+    border: 1px solid black;
 }
 
 .footer{
@@ -36,9 +46,8 @@ li{
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    position: absolute;
-    bottom: 0;
     margin-bottom: 10px;
+    height: 100px;
 }
 
 .sectionFooter{
@@ -47,6 +56,7 @@ li{
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    height: 100px;
 }
 
 .ulFooter{
