--- a/public/css/secretariaGestionTurno.css
+++ b/public/css/secretariaGestionTurno.css
@@ -29,6 +29,12 @@ li{
     list-style-type: none;
 }
 
+.formTurnos{
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
 .footer{
     border-top: 1px solid rgb(129, 129, 129);
     width: 60vw; 
