--- a/views/admin/adminCargarProfesional.pug
+++ b/views/admin/adminCargarProfesional.pug
@@ -5,7 +5,7 @@ html
         link(rel="stylesheet", href="/css/adminCargarProfesional.css")
     body
         header
-            a(href="https://agendadeconsultorio.onrender.com/admin/home", rel="noopener noreferrer"): img(src="/img/agenda.png", alt="" class="logoHeader")
+            a(href="https://agendadeconsultorios-vho3.onrender.com/admin/home", rel="noopener noreferrer"): img(src="/img/agenda.png", alt="" class="logoHeader")
             nav 
                 ul(class="ulHeader")
                     li: a(href="/admin/home") Inicio
@@ -17,16 +17,16 @@ html
             h1 Cargar Médicos
             section(class="sectionCrud")
                 article(class="articleCrud") 
-                    a(href="https://agendadeconsultorio.onrender.com/admin/createProfesional", rel="noopener noreferrer"): img(src="/img/create.png", alt="logoCreate" class="logoCreate")
+                    a(href="https://agendadeconsultorios-vho3.onrender.com/admin/createProfesional", rel="noopener noreferrer"): img(src="/img/create.png", alt="logoCreate" class="logoCreate")
                     span Cargar un médico
                 article(class="articleCrud") 
-                    a(href="https://agendadeconsultorio.onrender.com/admin/readProfesional", rel="noopener noreferrer"): img(src="/img/read.png", alt="logoRead" class="logoRead")
+                    a(href="https://agendadeconsultorios-vho3.onrender.com/admin/readProfesional", rel="noopener noreferrer"): img(src="/img/read.png", alt="logoRead" class="logoRead")
                     span Lista de médicos
                 article(class="articleCrud") 
-                    a(href="https://agendadeconsultorio.onrender.com/admin/updateProfesional", rel="noopener noreferrer"): img(src="/img/update.png", alt="logoUpdate" class="logoUpdate")
+                    a(href="https://agendadeconsultorios-vho3.onrender.com/admin/updateProfesional", rel="noopener noreferrer"): img(src="/img/update.png", alt="logoUpdate" class="logoUpdate")
                     span Editar datos de un médico
                 article(class="articleCrud")
-                    a(href="https://agendadeconsultorio.onrender.com/admin/deleteProfesional", rel="noopener noreferrer"): img(src="/img/inactivar.png", alt="logoDelete" class="logoDelete")
+                    a(href="https://agendadeconsultorios-vho3.onrender.com/admin/deleteProfesional", rel="noopener noreferrer"): img(src="/img/inactivar.png", alt="logoDelete" class="logoDelete")
                     span Activar / Inactivar un médico
         footer(class="footer")
             section(class="sectionFooter")
