--- a/views/paciente/paciente.pug
+++ b/views/paciente/paciente.pug
@@ -5,7 +5,7 @@ html
     link(rel="stylesheet" href="/css/paciente.css")
   body
     header
-      a(href="https://agendadeconsultorio.onrender.com/pacientes/paciente", rel="noopener noreferrer"): img(src="/img/agenda.png", alt="" class="logoHeader")
+      a(href="https://agendadeconsultorios-vho3.onrender.com/pacientes/paciente", rel="noopener noreferrer"): img(src="/img/agenda.png", alt="" class="logoHeader")
       nav 
         ul(class="ulHeader")
           li: a(href="/pacientes/paciente") Inicio
