--- a/views/admin/adminUpdateNameSuccess.pug
+++ b/views/admin/adminUpdateNameSuccess.pug
@@ -16,7 +16,7 @@ html
         main
             h1 ¡¡¡Se actualizo el nombre correctamente!!!
             p Buscar la ID o Matrícula en este 
-                a(href="https://agendadeconsultorio.onrender.com/admin/readProfesional", rel="noopener noreferrer", class="aLink") link
+                a(href="https://agendadeconsultorios-vho3.onrender.com/admin/readProfesional", rel="noopener noreferrer", class="aLink") link
             h2 Actualizar especialidad de un médico
             form(action="/admin/actualizarEspecialidad" method="POST")
                 input(type="text" name="matricula" placeholder="Matrícula del médico" required)
