--- a/views/secretaria/secretariaPanel.pug
+++ b/views/secretaria/secretariaPanel.pug
@@ -5,7 +5,7 @@ html
     link(rel="stylesheet" href="/css/secretaria.css")
   body
     header
-      a(href="https://agendadeconsultorio.onrender.com/secretaria/home" rel="noopener noreferrer"): img(src="/img/agenda.png" alt="" class="logoHeader")
+      a(href="https://agendadeconsultorios-vho3.onrender.com/secretaria/home" rel="noopener noreferrer"): img(src="/img/agenda.png" alt="" class="logoHeader")
       nav 
         ul(class="ulHeader")
           li: a(href="/turnos/listarTurnos") Ver Turnos
