--- a/views/secretaria/secretariaTurnoSuccess.pug
+++ b/views/secretaria/secretariaTurnoSuccess.pug
@@ -5,14 +5,14 @@ html
     link(rel="stylesheet" href="/css/secretariaGestionTurno.css")
   body
     header
-      a(href="https://agendadeconsultorio.onrender.com/secretaria/home" rel="noopener noreferrer"): img(src="/img/agenda.png" alt="" class="logoHeader")
+      a(href="https://agendadeconsultorios-vho3.onrender.com/secretaria/home" rel="noopener noreferrer"): img(src="/img/agenda.png" alt="" class="logoHeader")
       nav 
         ul(class="ulHeader")
           li: a(href="/turnos/listarTurnos") Ver Turnos
           li: a(href="/secretaria/gestionTurno") Gestionar Turnos
           li: a(href="javascript:void(0);" id="logoutButton") Cerrar Sesión
     h1 ¡Turno creado exitosamente!
-    a(href="https://agendadeconsultorio.onrender.com/secretaria/home" rel="noopener noreferrer") Volver al inicio
+    a(href="https://agendadeconsultorios-vho3.onrender.com/secretaria/home" rel="noopener noreferrer") Volver al inicio
       
 
     footer(class="footer")
