--- a/views/secretaria/secretariaPanel.pug
+++ b/views/secretaria/secretariaPanel.pug
@@ -19,6 +19,7 @@ html
           thead
             tr
               th Turno para
+              th Médico
               th Fecha
               th Hora
               th Observación
@@ -26,6 +27,7 @@ html
             each turno in turnos
               tr
                 td= turno.paciente_nombre
+                td= turno.profesional_especialidad
                 td= turno.fecha
                 td= turno.hora
                 td= turno.detalle_turno
