ultimos cambios y ajustes

--- a/views/paciente/pacienteTurno.pug
+++ b/views/paciente/pacienteTurno.pug
@@ -12,7 +12,7 @@ html
                     li: a(href="/pacientes/turno") Sacar Turnos
                     li: a(href="javascript:void(0);" id="logoutButton") Cerrar Sesión
         h1 Bienvenido, paciente!
-        p Aquí puedes sacar tus turnos.
+        p Pronto podrás sacar tus propios turnos, por el momento lo hará la secretaria por vos!
         footer(class="footer")
             section(class="sectionFooter")
                 ul(class="ulFooter") Nuestros GitHub
