--- a/views/admin/adminCargarProfesional.pug
+++ b/views/admin/adminCargarProfesional.pug
@@ -3,9 +3,10 @@ html
     head
         title Cargar Médico
         link(rel="stylesheet", href="/css/adminCargarProfesional.css")
+        link(rel="stylesheet" href="/css/footer.css")
     body
         header
-            a(href="https://agendadeconsultorios-vho3.onrender.com/admin/home", rel="noopener noreferrer"): img(src="/img/agenda.png", alt="" class="logoHeader")
+            a(href="http://localhost:3000/admin/home", rel="noopener noreferrer"): img(src="/img/agenda.png", alt="" class="logoHeader")
             nav 
                 ul(class="ulHeader")
                     li: a(href="/admin/home") Inicio
@@ -16,16 +17,16 @@ html
             h1 Cargar Médicos
             section(class="sectionCrud")
                 article(class="articleCrud") 
-                    a(href="https://agendadeconsultorios-vho3.onrender.com/admin/createProfesional", rel="noopener noreferrer"): img(src="/img/create.png", alt="logoCreate" class="logoCreate")
+                    a(href="http://localhost:3000/admin/createProfesional", rel="noopener noreferrer"): img(src="/img/create.png", alt="logoCreate" class="logoCreate")
                     span Cargar un médico
                 article(class="articleCrud") 
-                    a(href="https://agendadeconsultorios-vho3.onrender.com/admin/readProfesional", rel="noopener noreferrer"): img(src="/img/read.png", alt="logoRead" class="logoRead")
+                    a(href="http://localhost:3000/admin/readProfesional", rel="noopener noreferrer"): img(src="/img/read.png", alt="logoRead" class="logoRead")
                     span Lista de médicos
                 article(class="articleCrud") 
-                    a(href="https://agendadeconsultorios-vho3.onrender.com/admin/updateProfesional", rel="noopener noreferrer"): img(src="/img/update.png", alt="logoUpdate" class="logoUpdate")
+                    a(href="http://localhost:3000/admin/updateProfesional", rel="noopener noreferrer"): img(src="/img/update.png", alt="logoUpdate" class="logoUpdate")
                     span Editar datos de un médico
                 article(class="articleCrud")
-                    a(href="https://agendadeconsultorios-vho3.onrender.com/admin/deleteProfesional", rel="noopener noreferrer"): img(src="/img/inactivar.png", alt="logoDelete" class="logoDelete")
+                    a(href="http://localhost:3000/admin/deleteProfesional", rel="noopener noreferrer"): img(src="/img/inactivar.png", alt="logoDelete" class="logoDelete")
                     span Activar / Inactivar un médico
         footer(class="footer")
             section(class="sectionFooter")
