--- a/views/admin/adminCreateSuccess.pug
+++ b/views/admin/adminCreateSuccess.pug
@@ -4,9 +4,10 @@ html
         title Cargar Médico
         link(rel="stylesheet", href="/css/adminCargarProfesional.css")
         link(rel="stylesheet", href="/css/adminCreateProfesional.css")
+        link(rel="stylesheet" href="/css/footer.css")
     body
         header
-            a(href="https://agendadeconsultorios-vho3.onrender.com/admin/home", rel="noopener noreferrer"): img(src="/img/agenda.png", alt="" class="logoHeader")
+            a(href="http://localhost:3000/admin/home", rel="noopener noreferrer"): img(src="/img/agenda.png", alt="" class="logoHeader")
             nav 
                 ul(class="ulHeader")
                     li: a(href="/admin/home") Inicio
