--- a/views/paciente/pacienteTurno.pug
+++ b/views/paciente/pacienteTurno.pug
@@ -3,9 +3,10 @@ html
     head
         title Vista Paciente
         link(rel="stylesheet" href="/css/pacienteTurno.css")
+        link(rel="stylesheet" href="/css/footer.css")
     body
         header
-            a(href="https://agendadeconsultorios-vho3.onrender.com/pacientes/paciente", rel="noopener noreferrer"): img(src="/img/agenda.png", alt="" class="logoHeader")
+            a(href="http://localhost:3000/pacientes/paciente", rel="noopener noreferrer"): img(src="/img/agenda.png", alt="" class="logoHeader")
             nav 
                 ul(class="ulHeader")
                     li: a(href="/pacientes/paciente") Inicio
