--- a/views/secretaria/secretariaGestionTurno.pug
+++ b/views/secretaria/secretariaGestionTurno.pug
@@ -3,9 +3,10 @@ html
   head
     title Secretaria Panel
     link(rel="stylesheet" href="/css/secretariaGestionTurno.css")
+    link(rel="stylesheet" href="/css/footer.css")
   body
     header
-      a(href="https://agendadeconsultorios-vho3.onrender.com/secretaria/home" rel="noopener noreferrer"): img(src="/img/agenda.png" alt="" class="logoHeader")
+      a(href="http://localhost:3000/secretaria/home" rel="noopener noreferrer"): img(src="/img/agenda.png" alt="" class="logoHeader")
       nav 
         ul(class="ulHeader")
           li: a(href="/turnos/listarTurnos") Ver Turnos
