--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -1,44 +1,3 @@
-body {
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    background-color: #FBFBFB;
-    color: #333;
-    margin: 0;
-    padding: 0;
-    width: 100vw;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-
-header{
-    width: 80vw;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.ulHeader{
-    display: flex;
-    flex-direction: row;
-    gap: 50px;
-}
-
-.sectionMain{
-    min-height: 45vh;
-}
-
-table{
-    width: 800px;
-    text-align: center;
-    border: 1px solid black;
-}
-
-tr, th, td{
-    border: 1px solid black;
-}
-/*distinto*/
 .footer{
     border-top: 1px solid rgb(129, 129, 129);
     width: 60vw; 
@@ -46,8 +5,9 @@ tr, th, td{
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    position: absolute;
+    bottom: 0;
     margin-bottom: 10px;
-    height: 100px;
 }
 
 .sectionFooter{
@@ -56,10 +16,9 @@ tr, th, td{
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    height: 100px;
 }
 
-.ulFooter{
+ul{
     font-size: larger;
     display: flex;
     flex-direction: column;
