--- a/views/admin/adminCargarAgenda.pug
+++ b/views/admin/adminCargarAgenda.pug
@@ -3,9 +3,10 @@ html
     head
         title Cargar Médico
         link(rel="stylesheet", href="/css/adminCargarAgenda.css")
+        link(rel="stylesheet", href="/css/footer.css")
     body
         header
-            a(href="https://agendadeconsultorios-vho3.onrender.com/admin/home", rel="noopener noreferrer"): img(src="/img/agenda.png", alt="" class="logoHeader")
+            a(href="http://localhost:3000/admin/home", rel="noopener noreferrer"): img(src="/img/agenda.png", alt="" class="logoHeader")
             nav 
                 ul(class="ulHeader")
                     li: a(href="/admin/home") Inicio
