--- a/views/admin/adminDeleteSuccess.pug
+++ b/views/admin/adminDeleteSuccess.pug
@@ -3,9 +3,10 @@ html
     head
         title Cargar Médico
         link(rel="stylesheet", href="/css/adminCargarProfesional.css")
+        link(rel="stylesheet" href="/css/footer.css")
     body
         header
-            a(href="https://agendadeconsultorios-vho3.onrender.com/admin/home", rel="noopener noreferrer"): img(src="/img/agenda.png", alt="" class="logoHeader")
+            a(href="http://localhost:3000/admin/home", rel="noopener noreferrer"): img(src="/img/agenda.png", alt="" class="logoHeader")
             nav 
                 ul(class="ulHeader")
                     li: a(href="/admin/home") Inicio
@@ -15,7 +16,7 @@ html
         main 
             h1 ¡¡¡Se cambió el estado exitosamente!!!
             p Buscar la ID o Matrícula en este 
-                a(href="https://agendadeconsultorios-vho3.onrender.com/admin/readProfesional", rel="noopener noreferrer", class="aLink") link
+                a(href="http://localhost:3000/admin/readProfesional", rel="noopener noreferrer", class="aLink") link
             h1 Activar / Inactivar un Médico
             form(action="/admin/cambiarEstado" method="POST")
                 input(type="text" name="id" placeholder="ID del médico" required)
