--- a/views/home.pug
+++ b/views/home.pug
@@ -5,7 +5,7 @@ html
     link(rel="stylesheet", href="/css/home.css")
   body
     header
-      a(href="https://agendadeconsultorios-vho3.onrender.com/", rel="noopener noreferrer"): img(src="/img/agenda.png", alt="" class="logoHeader")
+      a(href="http://localhost:3000/", rel="noopener noreferrer"): img(src="/img/agenda.png", alt="" class="logoHeader")
       nav
           ul
               li: a(href="/auth/login") Iniciar Sesión
