--- a/views/login.pug
+++ b/views/login.pug
@@ -3,9 +3,10 @@ html
   head
     title Registro Login
     link(rel="stylesheet", href="/css/login.css")
+    link(rel="stylesheet" href="/css/footer.css")
   body
     header 
-      a(href="https://agendadeconsultorios-vho3.onrender.com/", rel="noopener noreferrer"): img(src="/img/agenda.png", alt="" class="logoHeader")
+      a(href="http://localhost:3000/", rel="noopener noreferrer"): img(src="/img/agenda.png", alt="" class="logoHeader")
     section.seccion
       article.articuloLogin
         form.formLogin(id="loginForm")
