--- a/views/admin/adminCargarAgenda.pug
+++ b/views/admin/adminCargarAgenda.pug
@@ -2,7 +2,7 @@ doctype html
 html
     head
         title Cargar Médico
-        link(rel="stylesheet", href="/css/adminCargarAgenda.css")
+        link(rel="stylesheet", href="/css/styleGeneral1.css")
         link(rel="stylesheet", href="/css/footer.css")
     body
         header
