--- a/views/admin/adminCreateProfesional.pug
+++ b/views/admin/adminCreateProfesional.pug
@@ -2,6 +2,7 @@ doctype html
 html
     head
         title Cargar Médico
+        link(rel="stylesheet", href="/css/styleGeneral1.css")
         link(rel="stylesheet", href="/css/adminCargarProfesional.css")
         link(rel="stylesheet", href="/css/adminFormCargar.css")
         link(rel="stylesheet" href="/css/footer.css")
