--- a/views/admin/adminPanel.pug
+++ b/views/admin/adminPanel.pug
@@ -2,7 +2,7 @@ doctype html
 html
     head
         title Agenda de Consultorios
-        link(rel="stylesheet", href="/css/admin.css")
+        link(rel="stylesheet", href="/css/styleGeneral1.css")
         link(rel="stylesheet", href="/css/footer.css")
     body
         header
