--- a/views/admin/adminPanel.pug
+++ b/views/admin/adminPanel.pug
@@ -15,13 +15,5 @@ html
                     li: a(href="javascript:void(0);" id="logoutButton") Cerrar Sesión
         main 
             h1 Administrador 
-        footer(class="footer")
-            section(class="sectionFooter")
-                ul Nuestros GitHub
-                    li: a(href="https://github.com/JuanCarrillo2435") Carrillo Juan
-                    li: a(href="https://github.com/MiguelLuceroSL") Lucero Miguel
-                img(src="/img/agenda.png", alt="" class="logoFooter")
-                ul Nuestros LinkedIn
-                    li: a(href="https://github.com/JuanCarrillo2435") Carrillo Juan
-                    li: a(href="https://www.linkedin.com/in/lucero-roque-roberto-miguel-2122bb251/") Lucero Miguel 
+        include includes/footer
         script(src="/js/logout.js")
