--- a/views/secretaria/secretariaGestionTurno.pug
+++ b/views/secretaria/secretariaGestionTurno.pug
@@ -39,14 +39,6 @@ html
       textarea(name="detalle_turno" id="detalle_turno" rows="4" placeholder="Detalles adicionales del turno" required)
       input(type="hidden" name="estado" value="Confirmado")
       button(type="submit") Crear Turno
-    footer(class="footer")
-      section(class="sectionFooter")
-        ul(class="ulFooter") Nuestros GitHub
-          li: a(href="https://github.com/JuanCarrillo2435") Carrillo Juan
-          li: a(href="https://github.com/MiguelLuceroSL") Lucero Miguel
-        img(src="/img/agenda.png" alt="" class="logoFooter")
-        ul(class="ulFooter") Nuestros LinkedIn
-          li: a(href="https://github.com/JuanCarrillo2435") Carrillo Juan
-          li: a(href="https://www.linkedin.com/in/lucero-roque-roberto-miguel-2122bb251/") Lucero Miguel
+    include includes/footer
     script(src="/js/logout.js")
     script(src="/js/horarios.js")
