--- a/views/admin/adminDeleteSuccess.pug
+++ b/views/admin/adminDeleteSuccess.pug
@@ -22,13 +22,5 @@ html
             form(action="/admin/cambiarEstado" method="POST")
                 input(type="text" name="id" placeholder="ID del médico" required)
                 button(type="submit") Cambiar de estado
-        footer(class="footer")
-            section(class="sectionFooter")
-                ul Nuestros GitHub
-                    li: a(href="https://github.com/JuanCarrillo2435") Carrillo Juan
-                    li: a(href="https://github.com/MiguelLuceroSL") Lucero Miguel
-                img(src="/img/agenda.png", alt="" class="logoFooter")
-                ul Nuestros LinkedIn
-                    li: a(href="https://github.com/JuanCarrillo2435") Carrillo Juan
-                    li: a(href="https://www.linkedin.com/in/lucero-roque-roberto-miguel-2122bb251/") Lucero Miguel 
+        include includes/footer
         script(src="/js/logout.js")
