--- a/views/admin/adminReadProfesional.pug
+++ b/views/admin/adminReadProfesional.pug
@@ -47,14 +47,6 @@ html
                                 td= profesional.estado === 1 ? 'Activo' : 'Inactivo'
             else
                 p No se encontraron profesionales para la especialidad seleccionada.
-        footer(class="footer")
-            section(class="sectionFooter")
-                ul Nuestros GitHub
-                    li: a(href="https://github.com/JuanCarrillo2435") Carrillo Juan
-                    li: a(href="https://github.com/MiguelLuceroSL") Lucero Miguel
-                img(src="/img/agenda.png" alt="" class="logoFooter")
-                ul Nuestros LinkedIn
-                    li: a(href="https://github.com/JuanCarrillo2435") Carrillo Juan
-                    li: a(href="https://www.linkedin.com/in/lucero-roque-roberto-miguel-2122bb251/") Lucero Miguel 
+        include includes/footer
         script(src="/js/logout.js")
         script(src="/js/profesionales.js")
