--- a/views/register.pug
+++ b/views/register.pug
@@ -18,12 +18,4 @@ html
             label.lbPwRegistro(for="registerPassword") Contraseña:
             input.inputPwRegistro(type="password", id="registerPassword", name="password", required, placeholder="Contraseña")
           button.botonRegistro(type="submit") Registrarse
-    footer(class="footer")
-      section(class="sectionFooter")
-        ul Nuestros GitHub
-          li: a(href="https://github.com/JuanCarrillo2435") Carrillo Juan
-          li: a(href="https://github.com/MiguelLuceroSL") Lucero Miguel
-        img(src="/img/agenda.png", alt="" class="logoFooter")
-        ul Nuestros LinkedIn
-          li: a(href="https://github.com/JuanCarrillo2435") Carrillo Juan
-          li: a(href="https://www.linkedin.com/in/lucero-roque-roberto-miguel-2122bb251/") Lucero Miguel
+    include includes/footer
