--- a/views/registerSuccess.pug
+++ b/views/registerSuccess.pug
@@ -18,13 +18,5 @@ html
             img(src="/img/1.jpg", alt="carrousel1" class="carrouselImg" id="imgCarrousel")
             p(id="pCarrousel") Saca tus turnos médicos de manera fácil y rápida.
           button(type="button" class="btnDer" id="btnDer"): img(src="/img/btn1.png", alt="btn1" class="btn1")
-    footer(class="footer")
-      section(class="sectionFooter")
-        ul Nuestros GitHub
-          li: a(href="https://github.com/JuanCarrillo2435") Carrillo Juan
-          li: a(href="https://github.com/MiguelLuceroSL") Lucero Miguel
-        img(src="/img/agenda.png", alt="" class="logoFooter")
-        ul Nuestros LinkedIn
-          li: a(href="https://github.com/JuanCarrillo2435") Carrillo Juan
-          li: a(href="https://www.linkedin.com/in/lucero-roque-roberto-miguel-2122bb251/") Lucero Miguel
+    include includes/footer
     script(type="module" src="/js/home.js")
