--- a/views/secretaria/secretariaPanel.pug
+++ b/views/secretaria/secretariaPanel.pug
@@ -33,13 +33,5 @@ html
                 td= turno.detalle_turno
             else
               p No hay turnos disponibles
-    footer(class="footer")
-      section(class="sectionFooter")
-        ul(class="ulFooter") Nuestros GitHub
-          li: a(href="https://github.com/JuanCarrillo2435") Carrillo Juan
-          li: a(href="https://github.com/MiguelLuceroSL") Lucero Miguel
-        img(src="/img/agenda.png" alt="" class="logoFooter")
-        ul(class="ulFooter") Nuestros LinkedIn
-          li: a(href="https://github.com/JuanCarrillo2435") Carrillo Juan
-          li: a(href="https://www.linkedin.com/in/lucero-roque-roberto-miguel-2122bb251/") Lucero Miguel
+    include includes/footer
     script(src="/js/logout.js")
