--- a/views/secretaria/secretariaTurnoSuccess.pug
+++ b/views/secretaria/secretariaTurnoSuccess.pug
@@ -16,15 +16,7 @@ html
     a(href="http://localhost:3000/secretaria/home" rel="noopener noreferrer") Volver al inicio
       
 
-    footer(class="footer")
-      section(class="sectionFooter")
-        ul(class="ulFooter") Nuestros GitHub
-          li: a(href="https://github.com/JuanCarrillo2435") Carrillo Juan
-          li: a(href="https://github.com/MiguelLuceroSL") Lucero Miguel
-        img(src="/img/agenda.png" alt="" class="logoFooter")
-        ul(class="ulFooter") Nuestros LinkedIn
-          li: a(href="https://github.com/JuanCarrillo2435") Carrillo Juan
-          li: a(href="https://www.linkedin.com/in/lucero-roque-roberto-miguel-2122bb251/") Lucero Miguel
+    include includes/footer
 
     script(src="/js/logout.js")
     script(src="/js/horarios.js")
