--- a/views/secretaria/secretariaPanel.pug
+++ b/views/secretaria/secretariaPanel.pug
@@ -4,13 +4,7 @@ html
     title Secretaria Panel
     link(rel="stylesheet" href="/css/secretaria.css")
   body
-    header
-      a(href="http://localhost:3000/secretaria/home" rel="noopener noreferrer"): img(src="/img/agenda.png" alt="" class="logoHeader")
-      nav 
-        ul(class="ulHeader")
-          li: a(href="/turnos/listarTurnos") Ver Turnos
-          li: a(href="/turnos/listarProfesionales") Sacar Turnos
-          li: a(href="javascript:void(0);" id="logoutButton") Cerrar Sesión
+    include includes/headerSecretaria
     h1 ¡Bienvenida, secretaria!
     h2 Lista de Turnos
     section.sectionMain
