--- a/views/admin/adminSecretariaSuccess.pug
+++ b/views/admin/adminSecretariaSuccess.pug
@@ -8,14 +8,7 @@ html
         link(rel="stylesheet", href="/css/login.css")
         link(rel="stylesheet" href="/css/footer.css")
     body
-        header
-            a(href="http://localhost:3000/admin/home", rel="noopener noreferrer"): img(src="/img/agenda.png", alt="" class="logoHeader")
-            nav 
-                ul(class="ulHeader")
-                    li: a(href="/admin/home") Inicio
-                    li: a(href="/admin/cargarProfesional") Médicos
-                    li: a(href="/admin/registerSecretaria") Registrar secretaria
-                    li: a(href="javascript:void(0);" id="logoutButton") Cerrar Sesión
+        include includes/headerAdmin
         section.seccionSecre
             h1 ¡Secretaria creada con éxito!
             article.articuloRegistro
