--- a/views/registerSuccess.pug
+++ b/views/registerSuccess.pug
@@ -4,12 +4,7 @@ html
     title Agenda de Consultorios
     link(rel="stylesheet", href="/css/home.css")
   body
-    header
-      a(href="http://localhost:3000/", rel="noopener noreferrer"): img(src="/img/agenda.png", alt="" class="logoHeader")
-      nav
-          ul
-              li: a(href="/auth/login") Iniciar Sesión
-              li: a(href="/auth/register") Registrarse
+    include includes/headerHome
     main
         h1 ¡Usuario registrado exitosamente!
         section(class="sectionCarrousel")
