--- a/views/secretaria/secretariaTurnoSuccess.pug
+++ b/views/secretaria/secretariaTurnoSuccess.pug
@@ -5,13 +5,7 @@ html
     link(rel="stylesheet" href="/css/secretariaGestionTurno.css")
     link(rel="stylesheet" href="/css/footer.css")
   body
-    header
-      a(href="http://localhost:3000/secretaria/home" rel="noopener noreferrer"): img(src="/img/agenda.png" alt="" class="logoHeader")
-      nav 
-        ul(class="ulHeader")
-          li: a(href="/turnos/listarTurnos") Ver Turnos
-          li: a(href="/secretaria/gestionTurno") Gestionar Turnos
-          li: a(href="javascript:void(0);" id="logoutButton") Cerrar Sesión
+    include includes/headerSecretaria
     h1 ¡Turno creado exitosamente!
     a(href="http://localhost:3000/secretaria/home" rel="noopener noreferrer") Volver al inicio
       
