cambios footer.css
cambie el estilo del footer

--- a/public/css/secretaria.css
+++ b/public/css/secretaria.css
@@ -46,7 +46,7 @@ tr, th, td{
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
     height: 100px;
 }
 
@@ -57,16 +57,29 @@ tr, th, td{
     justify-content: space-between;
     align-items: center;
     height: 100px;
+    margin-top: 5px;
 }
 
-.ulFooter{
-    font-size: larger;
+.articleFooter{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+  }
+  
+  .spanFooter{
+    font-weight: 600;
+  }
+
+.ulFooter{
+    font-size: larger;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
     padding: 0;
-    font-weight:600;
+    margin: 0;
+    gap: 20px;
 }
 
 li{
@@ -79,7 +92,8 @@ li{
 a{
     text-decoration: none;
     color: black;
-    font-weight:400;
+    font-weight:100;
+    font-size: 15px;
 }
 
 a:hover{
