--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -7,6 +7,7 @@
     align-items: center;
     position: absolute;
     bottom: 0;
+    margin-bottom: 5px;
     margin-bottom: 10px;
 }
 
@@ -16,29 +17,42 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    margin-top: 5px;
 }
 
-ul{
-    font-size: larger;
+.articleFooter{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+  }
+  
+  .spanFooter{
+    font-weight: 600;
+  }
+
+ul{
+    font-size: larger;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
     padding: 0;
-    font-weight:600;
+    margin: 0;
+    gap: 20px;
 }
 
 li{
     list-style-type: none;
     font-size: medium;
-    margin-top: 5px;
     text-decoration: none;
 }
 
 a{
     text-decoration: none;
     color: black;
-    font-weight:400;
+    font-weight:100;
+    font-size: 15px;
 }
 
 a:hover{
