--- a/public/css/home.css
+++ b/public/css/home.css
@@ -86,7 +86,7 @@ h1{
   align-items: center;
   position: absolute;
   bottom: 0;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
   padding-left: 50px;
   padding-right: 50px;
 }
@@ -97,29 +97,41 @@ h1{
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  margin-top: 5px;
 }
 
-ul {
-  font-size: larger;
+.articleFooter{
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 0;
+}
+
+.spanFooter{
   font-weight: 600;
+}
+
+ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
+  margin: 0;
+  gap: 20px;
 }
 
 li {
   list-style-type: none;
   font-size: medium;
-  margin-top: 5px;
   text-decoration: none;
 }
 
 a {
   text-decoration: none;
   color: black;
-  font-weight: 400;
+  font-weight: 100;
+  font-size: 15px;
 }
 
 a:hover {
