--- a/views/includes/footer.pug
+++ b/views/includes/footer.pug
@@ -1,9 +1,13 @@
 footer(class="footer")
             section(class="sectionFooter")
-                ul Nuestros GitHub
-                    li: a(href="https://github.com/JuanCarrillo2435") Carrillo Juan
-                    li: a(href="https://github.com/MiguelLuceroSL") Lucero Miguel
+                article(class="articleFooter") 
+                    span(class="spanFooter") Nuestros GitHub
+                    ul
+                        li: a(href="https://github.com/JuanCarrillo2435") Carrillo Juan
+                        li: a(href="https://github.com/MiguelLuceroSL") Lucero Miguel
                 img(src="/img/agenda.png", alt="" class="logoFooter")
-                ul Nuestros LinkedIn
-                    li: a(href="https://github.com/JuanCarrillo2435") Carrillo Juan
-                    li: a(href="https://www.linkedin.com/in/lucero-roque-roberto-miguel-2122bb251/") Lucero Miguel
+                article(class="articleFooter") 
+                    span(class="spanFooter") Nuestros LinkedIn
+                    ul
+                        li: a(href="https://github.com/JuanCarrillo2435") Carrillo Juan
+                        li: a(href="https://www.linkedin.com/in/lucero-roque-roberto-miguel-2122bb251/") Lucero Miguel
