--- a/views/paciente/pacientePerfil.pug
+++ b/views/paciente/pacientePerfil.pug
@@ -5,8 +5,8 @@ html
     link(rel="stylesheet" href="/css/paciente.css")
     link(rel="stylesheet" href="/css/footer.css")
   body
-    include ../includes/headerPaciente
-    h1 Bienvenido, #{user.nombre_completo}!
+    include includes/headerPaciente
+    h1 Bienvenido, paciente!
     p Aquí puedes gestionar tus consultas médicas.
-    include ../includes/footer
+    include includes/footer
     script(src="/js/logout.js")
