--- a/views/paciente/pacienteTurno.pug
+++ b/views/paciente/pacienteTurno.pug
@@ -5,8 +5,8 @@ html
         link(rel="stylesheet" href="/css/pacienteTurno.css")
         link(rel="stylesheet" href="/css/footer.css")
     body
-        include includes/headerPaciente
+        include ../includes/headerPaciente
         h1 Bienvenido, paciente!
         p Pronto podrás sacar tus propios turnos, por el momento lo hará la secretaria por vos!
-        include includes/footer
+        include ../includes/footer
         script(src="/js/logout.js")
